--- a/codes/experiments/exp1/linear/config.yml
+++ b/codes/experiments/exp1/linear/config.yml
@@ -1,4 +1,4 @@
-# 基準のconfig. コード内で時定数を変える
+# Standard config. Change the time constant in the code.
 model:
   type: dynamic-snn
   
@@ -8,7 +8,7 @@ model:
   dropout: 0.0
 
   dt: 0.006 #s
-  init-tau: 0.05 #dt/tauが1を超えないようにする
+  init-tau: 0.05 # Make sure dt/tau does not exceed 1.
   min-tau: 0.001
   v-threshold: 0.01
   v-rest: 0.0
